appId: com.teya.lemonade
---
- launchApp
- assertVisible: "Lemonade Design System"
- assertVisible: "Icons"
- tapOn: "Icons"
- swipe:
    direction: UP
    duration: 500
- swipe:
    direction: UP
    duration: 500
